--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,29 +2,36 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Test factory{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+            <style>
+
+                body .wrapper {padding: 0 0 30px 0;}
+                body header {padding: 20px 0;}
+                body {font-family: Tahoma; font-size: 12px}
+            </style>
         {% endblock %}
     </head>
     <body>
-    <div class="container-fluid vh-100" style='background-image: url("/images/bg_image1.jpg")'>
-    <div class="container bg-light rounded h-100">
-        <div class="row"><div class="col">&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br>&nbsp;<br> </div> </div>
-        <div class="row ">
-            <div class="col bg-dark rounded p-1 m-1">
-                <ul class="list-inline">
-                    {% for m in menu %}
-                    <li class="list-inline-item"><strong><a class="text-light" href="{{ m.slug }}">{{ m.name }}</a></strong> </li>
-                    {% endfor %}
-                </ul>
-            </div>
-        </div>
+    <div class="container text-secondary">
+        <header class=""><a href="/"><img src="/images/logo1.jpg" alt="logo"></a></header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-top border-bottom border-secondary">
+            <ul class="navbar-nav">
+                {% for m in menu %}
+                    <li class="nav-item"><a class="nav-link" href="{{ m.slug }}">{{ m.name }}</a></li>
+                {% endfor %}
+            </ul>
+        </nav>
+        <div class="heading"></div>
         <div class="row">
-            <div class="col">{% block body %}{% endblock %}</div>
+            <aside class="col"><div class="mt-3">1werwerwerewr rwerwerwerwerwer ggdfgdfg  g dfg df g df df g dfg d</div>
+            </aside>
+            <section class="col-10 "><div class="border-left border-secondary pl-3 mt-3">{% block body %}{% endblock %}</div>
+            </section>
         </div>
     </div>
-    </div>
+    <footer></footer>
         {% block javascripts %}
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
