--- a/templates/city/index.html.twig
+++ b/templates/city/index.html.twig
@@ -3,13 +3,11 @@
 {% block title %}{% endblock %}
 
 {% block body %}
-    <div class="container">
         {% for city in pagination.items %}
-        <div class="row">
-            <div class="float-left"><img src="/images/city/{{ city.image }}" class="rounded img-thumbnail" style="width: 150px; height: 100px"></div><p></p>
-            <div class=""><strong><a href="{{ path('hotel', {'city': city.id}) }}">{{ city.name }}</a></strong><br>{{ city.description }}</div>
-        </div>
+            <div class="row">
+            <div class="col"><img src="/images/city/{{ city.image }}" class="rounded img-thumbnail" style="width: 150px; height: 100px"></div>
+            <div class="col-9"><a href="{{ path('hotel', {'city': city.id}) }}">{{ city.name }}</a><br>{{ city.description }}</div>
+            </div>
         {% endfor %}
-    </div>
-    <div class="container"> {{ knp_pagination_render(pagination) }}</div>
+    <div> {{ knp_pagination_render(pagination) }}</div>
 {% endblock %}
