--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,22 +10,27 @@
                 body .wrapper {padding: 0 0 30px 0;}
                 body header {padding: 20px 0;}
                 body {font-family: Tahoma; font-size: 12px}
+                .form-control, .btn {font-family: Tahoma; font-size: 12px}
             </style>
         {% endblock %}
     </head>
     <body>
     <div class="container text-secondary">
         <header class=""><a href="/"><img src="/images/logo1.jpg" alt="logo"></a></header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light border-top border-bottom border-secondary">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-top border-bottom border-secondary justify-content-between">
             <ul class="navbar-nav">
                 {% for m in menu %}
                     <li class="nav-item"><a class="nav-link" href="{{ m.slug }}">{{ m.name }}</a></li>
                 {% endfor %}
             </ul>
+            <form class="form-inline">
+                <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="search">
+                <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Поиск</button>
+            </form>
         </nav>
         <div class="heading"></div>
         <div class="row">
-            <aside class="col"><div class="mt-3">1werwerwerewr rwerwerwerwerwer ggdfgdfg  g dfg df g df df g dfg d</div>
+            <aside class="col"><div class="mt-3 text-center"><span>Поиск Гостиниц</span></div>
             </aside>
             <section class="col-10 "><div class="border-left border-secondary pl-3 mt-3">{% block body %}{% endblock %}</div>
             </section>
