--- a/templates/hotel/desc.html.twig
+++ b/templates/hotel/desc.html.twig
@@ -13,5 +13,47 @@
             <div class="row">
                 <div class="">{{ hotel.description }}</div>
             </div>
+        <h4> - Номера</h4>
+            <table class="table text-secondary">
+                <thead class="thead-light">
+                <tr>
+                    <th>
+                        Номер
+                    </th>
+                    <th>
+                        Цена (руб.)
+                    </th>
+                </tr>
+                </thead>
+                {% for room in rooms %}
+                    <tr>
+                        <td>{{ room.name }}</td>
+                        <td>{{ room.price }}</td>
+                    </tr>
+                {% endfor %}
+            </table>
+        <h4> - Услуги</h4>
+        <ul class="list-group list-group-flush">
+            {% for service in services %}
+                <li class="list-group-item">{{ service.name }}</li>
+            {% endfor %}
+        </ul>
+        <h4> - Отзывы</h4>
+        {% if is_granted('ROLE_USER') %}
+            {{ form(review_form) }}
+        {% else %}
+            <span>Для того, чтобы оставлять отзывы необходимо авторизоваться</span>
+        {% endif %}
+        <div class="list-group">
+            {% for review in reviews %}
+                <div class="list-group-item list-group-item-action flex-column align-items-start">
+                    <div class="d-flex w-100 justify-content-between">
+                        <h5 class="mb-1">{{ review.name }}</h5>
+                        <strong>Оценка - {{ review.mark }}</strong>
+                    </div>
+                    <span>{{ review.text }}</span>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 {% endblock %}
