--- a/templates/hotel/desc.html.twig
+++ b/templates/hotel/desc.html.twig
@@ -3,10 +3,33 @@
 {% block title %}!{% endblock %}
 
 {% block body %}
+
     <div class="container">
             <div class="row">
-                <div class="float-left"><img src="/images/hotel/{{ hotel.img }}" class="rounded img-thumbnail"></div><p>&nbsp;</p>
+                <div class="d-flex w-100 justify-content-between">
+                    <div class="float-left"><img src="/images/hotel/{{ hotel.img }}" class="rounded img-thumbnail"></div>
+                    <div id="carouselExampleControls" class="carousel slide w-100"  data-ride="carousel">
+                        <div class="carousel-inner">
+                            {% for key, gal in gallery %}
+                                <div class="carousel-item {% if key == 0 %}active{% endif %}">
+                                    <img src="/images/hotel/gallery/{{ gal.img }}" class="d-block w-100" style="width: 300px;height: 250px" alt="...">
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
             </div>
+
+
+
             <div class="row">
                 <div class=""><strong><a href="">{{ hotel.name }}</a></strong><br>Категория - {{ hotel.class }}<br>Адрес - {{ hotel.address }}</div>
             </div><p>&nbsp;</p>
